# bedrock

./: README.md  pyproject.toml
dentist_agent/: __init__.py  transcription_agent.py
tests/: test_transcription_agent.py
transcripts/: sample_transcript.txt
